--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1391,7 +1391,8 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "release-0.7.x-20250331101502-2fe19fb"
+      tag: "release-1.0.x-20250418091744-8936963"
+
 
       pullPolicy: IfNotPresent
     resources:
@@ -1649,6 +1650,7 @@ apiproxy:
     pullPolicy: IfNotPresent
   service:
     port: 80
+    containerPort: 8080
   resources:
     limits:
       cpu: "0.5"
