--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -34,6 +34,7 @@ grafana:
     allowPrivilegeEscalation: false
     runAsNonRoot: true
     
+ # -- Dashboard voor gemeenten
   dashboardProviders:
     dashboardproviders.yaml:
       apiVersion: 1
@@ -61,6 +62,7 @@ grafana:
   #        options:
   #          path: /var/lib/grafana/dashboards/monitoring
 
+  # -- Dashboard opgenomen in ConfigMap
   dashboardsConfigMaps:
     default: "logging-podiumd-dashboard" 
   #  monitoring: "monitoring" 
