--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -166,6 +166,9 @@ prometheus:
   prometheus-pushgateway:
     nodeSelector:
       agentpool: userpool
+  kube-state-metrics:
+    nodeSelector:
+      agentpool: userpool
 
 promtail:
   enabled: true
