--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -2,19 +2,13 @@ apiVersion: v2
 name: podiumd
 description: PodiumD Helm chart
 type: application
-version: 4.0.7
-appVersion: "4.0.7"
+version: 4.1.0
+appVersion: "4.1.0"
 dependencies:
   - name: keycloak
     version: 24.3.0
     repository: "@bitnami"
     condition: keycloak.enabled
-  - name: openldap
-    version: 1.0.2
-    repository: "@dimpact"
-    condition: openldap.enabled
-    tags:
-      - zaak
   - name: clamav
     version: 3.2.0
     repository: "@wiremind"
@@ -27,32 +21,36 @@ dependencies:
       - contact
       - zaak
   - name: openzaak
-    version: 1.8.0
+    version: 1.8.1
     repository: "@maykinmedia"
     condition: openzaak.enabled
   - name: opennotificaties
-    version: 1.8.0
+    version: 1.8.2
     repository: "@maykinmedia"
     condition: opennotificaties.enabled
   - name: objecten
-    version: 2.7.1
+    version: 2.7.4
     repository: "@maykinmedia"
     condition: objecten.enabled
   - name: objecttypen
-    version: 1.3.0
+    version: 1.3.2
     repository: "@maykinmedia"
     condition: objecttypen.enabled
+  - name: openarchiefbeheer
+    version: 1.3.8
+    repository: "@maykinmedia"
+    condition: openarchiefbeheer.enabled
   - name: openklant
-    version: 1.5.0
+    version: 1.6.3
     repository: "@maykinmedia"
     condition: openklant.enabled
   - name: openforms
     alias: openformulieren
-    version: 1.4.4
+    version: 1.8.2
     repository: "@maykinmedia"
     condition: openformulieren.enabled
   - name: openinwoner
-    version: 1.7.0
+    version: 1.7.2
     repository: "@maykinmedia"
     condition: openinwoner.enabled
   - name: kiss-elastic
@@ -68,7 +66,7 @@ dependencies:
     condition: infinispan.enabled
   - name: zaakafhandelcomponent
     alias: zac
-    version: 1.0.25
+    version: 1.0.46
     repository: "@zac"
     condition: zac.enabled
     tags:
