--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -347,12 +347,128 @@ brpmock:
 
 openzaak:
   configuration:
-    oidcUrl: https://openzaak.example.nl
-    oidcSecret: "<openzaak>"
+    enabled: true
     initContainer:
-      enabled: true
-    job:
       enabled: false
+    job:
+      enabled: true
+      backoffLimit: 6
+      ttlSecondsAfterFinished: 0    
+      restartPolicy: Never
+      resources: {}
+    data: ""  
+    # data: |-
+    #   oidc_db_config_enable: true
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: True
+    #       oidc_rp_client_id: openzaak.example.nl
+    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_scopes_list:
+    #       - openid
+    #       - email
+    #       - profile
+    #       - roles
+    #       oidc_rp_sign_algo: RS256
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/
+    #       username_claim:
+    #       - sub
+    #       groups_claim:
+    #       - roles
+    #       claim_mapping:
+    #         first_name:
+    #         - given_name
+    #         last_name:
+    #         - family_name
+    #         email:
+    #         - email
+    #       sync_groups: true
+    #       sync_groups_glob_pattern: "*"
+    #       default_groups: []
+    #       make_users_staff: true
+    #       superuser_group_names:
+    #       - Superuser
+    #       oidc_use_nonce: true
+    #       oidc_nonce_size: 32
+    #       oidc_state_size: 32
+    #       userinfo_claims_source: id_token          
+    #   zgw_consumers_config_enable: true
+    #   zgw_consumers:
+    #     services:
+    #     - identifier: notifications-api
+    #       label: Notificaties API
+    #       api_root: https://opennotificaties.example.nl/api/v1/
+    #       api_connection_check_path: notificaties
+    #       api_type: nrc
+    #       auth_type: zgw
+    #       client_id: open-zaak
+    #       secret: ${openzaak_opennotificaties_secret}        
+    #     - identifier: selectielijst-api
+    #       label: Selectielijst API
+    #       api_root: https://selectielijst.openzaak.nl/api/v1/
+    #       api_type: orc
+    #       auth_type: no_auth      
+    #   vng_api_common_credentials_config_enable: true
+    #   vng_api_common_credentials:
+    #     items:
+    #     - identifier: open-formulieren
+    #       secret: ${openzaak_openforms_secret}
+    #     - identifier: openinwoner
+    #       secret: ${openzaak_openinwoner_secret}
+    #     - identifier: open-notificaties
+    #       secret: ${opennotificaties_autorisatie_api_secret}
+    #     - identifier: open-zaak
+    #       secret: ${openzaak_opennotificaties_secret}         
+    #   sites_config_enable: true
+    #   sites_config:
+    #     items:
+    #     - domain: openzaak.example.nl
+    #       name: Open-Zaak Gemeente-x
+    #   notifications_config_enable: true
+    #   notifications_config:
+    #     notifications_api_service_identifier: notifications-api
+    #     notification_delivery_max_retries: 1
+    #     notification_delivery_retry_backoff: 2
+    #     notification_delivery_retry_backoff_max: 3
+    #   openzaak_selectielijst_config_enable: true
+    #   openzaak_selectielijst_config:
+    #     selectielijst_api_service_identifier: selectielijst-api
+    #     allowed_years:
+    #       - 2020
+    #       - 2017
+    #     default_year: 2020
+    #   vng_api_common_applicaties_config_enable: true
+    #   vng_api_common_applicaties:
+    #     items:
+    #     - uuid: c8132033-0a8e-4d65-8a15-66d040b9b6ee
+    #       client_ids:
+    #       - open-formulieren
+    #       label: Open Formulieren
+    #       heeft_alle_autorisaties: true
+    #     - uuid: bd1eef6d-1d32-4df4-845c-d21ce72f1306
+    #       client_ids:
+    #       - openinwoner
+    #       label: Open Inwoner
+    #       heeft_alle_autorisaties: true
+    #     - uuid: 7b4771df-3166-4873-a09b-33745a291c32
+    #       client_ids:
+    #       - open-notificaties
+    #       label: Open Notificatie
+    #       heeft_alle_autorisaties: true
+    #     - uuid: e620beb2-a767-42b0-b61e-e5d50ac503b9
+    #       client_ids:
+    #       - open-zaak
+    #       label: Open Zaak
+    #       heeft_alle_autorisaties: true
+    secrets: {}
+      # openzaak_openforms_secret: "<openzaak_openforms_secret>"
+      # openzaak_openinwoner_secret: "<openzaak_openinwoner_secret>"
+      # opennotificaties_autorisatie_api_secret: "<opennotificaties_autorisatie_api_secret>"
+      # openzaak_opennotificaties_secret: "<openzaak_opennotificaties_secret>"
+    oidcUrl: https://openzaak.example.nl
+    oidcSecret: "<openzaak>"             
   create_required_catalogi_job:
     client_id: "<openzaak_client_id>"
     secret: "<openzaak_secret>"
