--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -895,6 +895,79 @@ objecten:
 
 objecttypen:
   configuration:
+    enabled: true
+    initContainer:
+      enabled: false
+    job:
+      enabled: true
+      backoffLimit: 6
+      ttlSecondsAfterFinished: 0
+      restartPolicy: OnFailure
+      resources: {}
+    secrets: {}
+      # keycloak_client_secret: "<keycloak_client_secret>"
+      # object_objecttypes_token: "<object_objecttypes_token>"
+      # openformulieren_objecten_token: "<openformulieren_objecten_token>"
+    data: ""  
+    # data: |-
+    #   oidc_db_config_enable: true
+    #   oidc_db_config_admin_auth:
+    #     items:
+    #     - identifier: admin-oidc
+    #       enabled: True
+    #       oidc_rp_client_id: objecttypen.example.nl
+    #       oidc_rp_client_secret: '${keycloak_client_secret}'
+    #       oidc_rp_scopes_list:
+    #       - openid
+    #       - email
+    #       - profile
+    #       - roles
+    #       oidc_rp_sign_algo: RS256
+    #       endpoint_config:
+    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/
+    #       username_claim:
+    #       - sub
+    #       groups_claim:
+    #       - roles
+    #       claim_mapping:
+    #         first_name:
+    #         - given_name
+    #         last_name:
+    #         - family_name
+    #         email:
+    #         - email
+    #       sync_groups: true
+    #       sync_groups_glob_pattern: "*"
+    #       default_groups: []
+    #       make_users_staff: true
+    #       superuser_group_names:
+    #       - Superuser
+    #       oidc_use_nonce: true
+    #       oidc_nonce_size: 32
+    #       oidc_state_size: 32
+    #       userinfo_claims_source: id_token      
+    #   tokenauth_config_enable: true
+    #   tokenauth:
+    #     items:
+    #       - identifier: objecten-token
+    #         token: ${object_objecttypes_token}
+    #         contact_person: Person 1
+    #         email: person-1@example.com
+    #         organization: Organization 1
+    #         application: Objecten API
+    #         administration: Administration 1
+    #       - identifier: openformulier-token
+    #         token: ${openformulieren_objecten_token}
+    #         contact_person: Person 1
+    #         email: person-1@example.com
+    #         organization: Organization 1
+    #         application: Application 1
+    #         administration: Administration 1
+    #   sites_config_enable: true
+    #   sites_config:
+    #       items:
+    #         - domain: objecttypen.example.nl
+    #           name: objecttypen  
     token: "<token>"
     oidcUrl: https://objecttypen.example.nl
     oidcSecret: "<objecttypen>"
