--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -13,13 +13,10 @@ dependencies:
     version: 3.2.0
     repository: "@wiremind"
     condition: clamav.enabled
-  - name: brpmock
+  - name: brp-personen-mock
     version: ~1.2.4
     repository: "@dimpact"
-    condition: brpmock.enabled
-    tags:
-      - contact
-      - zaak
+    condition: brp-personen-mock.enabled
   - name: openzaak
     version: 1.8.1
     repository: "@maykinmedia"
