--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1641,6 +1641,10 @@ clamav:
 apiproxy:
   enabled: false
   replicaCount: 1
+  imagePullSecrets: []
+  nodeSelector: {}
+  affinity: {}
+  tolerations: []
   #nameOverride: "iconnect-proxy"
   image:
     repository: nginx
