feat: add affinity/tolerations/imagepullsecret and nodeselector to brppersonenmock and apiproxy deployments

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1649,6 +1649,10 @@ clamav:
 apiproxy:
   enabled: false
   replicaCount: 1
+  imagePullSecrets: []
+  nodeSelector: {}
+  affinity: {}
+  tolerations: []
   #nameOverride: "iconnect-proxy"
   image:
     repository: nginx
