--- a/charts/podiumd/templates/api-proxy-deployment.yaml
+++ b/charts/podiumd/templates/api-proxy-deployment.yaml
@@ -15,18 +15,24 @@ spec:
       labels:
         app: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
     spec:
+      {{- with .Values.apiproxy.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: nginx
         image: {{ .Values.apiproxy.image.repository }}:{{ .Values.apiproxy.image.tag }}
         ports:
-        - containerPort: 8080
+        - containerPort: {{ .Values.apiproxy.service.containerPort }}
           name: http
         volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/nginx.conf
           subPath: nginx.conf
+        {{- if .Values.apiproxy.nginxCertsSecret }}
         - name: nginx-certs
           mountPath: /etc/nginx/certs
+        {{- end }}
         resources:
           limits:
             cpu: {{ .Values.apiproxy.resources.limits.cpu }}
@@ -37,20 +43,34 @@ spec:
         livenessProbe:
           httpGet:
             path: /_health/
-            port: {{ .Values.apiproxy.service.port }}
+            port: {{ .Values.apiproxy.service.containerPort }}
           initialDelaySeconds: {{ .Values.apiproxy.livenessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.apiproxy.livenessProbe.periodSeconds }}
         readinessProbe:
           httpGet:
             path: /_health/
-            port: {{ .Values.apiproxy.service.port }}
+            port: {{ .Values.apiproxy.service.containerPort }}
           initialDelaySeconds: {{ .Values.apiproxy.readinessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.apiproxy.readinessProbe.periodSeconds }}
       volumes:
       - name: nginx-config
         configMap:
           name: {{ default "api-proxy" .Values.apiproxy.nameOverride }}-nginx-config
+      {{- if .Values.apiproxy.nginxCertsSecret }}
       - name: nginx-certs
         secret:
           secretName: {{ .Values.apiproxy.nginxCertsSecret }}
+      {{- end }}
+      {{- with .Values.apiproxy.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.apiproxy.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.apiproxy.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end }}
