Modified server domain name in values.yaml

--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -99,7 +99,7 @@ grafana:
       disable_signout_menu: false
       allow_sign_up: true
     server:
-      domain: "https://logs.test.nl/"
+      domain: "logs.test.nl/"
       enforce_domain: true
       root_url: "https://logs.test.nl/"
     metrics:
