--- a/charts/brp-personen-mock/values.yaml
+++ b/charts/brp-personen-mock/values.yaml
@@ -1,19 +1,25 @@
+image:
+  # -- Personen mock image repository
+  repository: ghcr.io/brp-api/personen-mock
+  # -- Personen mock tag
+  tag: 2.6.0-202502261446
+  # -- Personen mock image pull policy
+  pullPolicy: IfNotPresent
+service:
+  type: ClusterIP
+  port: 5010
+serviceAccount:
+  automount: true
+  create: true
+  annotations: {}
+  name: "brp-personen-mock"
+imagePullSecrets: []
 nodeSelector: {}
-
-brppersonenmock:
-  image:
-    # -- Personen mock image repository
-    repository: ghcr.io/brp-api/personen-mock
-    # -- Personen mock tag
-    tag: 2.6.0-202502261446
-    # -- Personen mock image pull policy
-    pullPolicy: IfNotPresent
-  imagePullSecrets: []
-  nodeSelector: {}
-  affinity: {}
-  tolerations: []
-  resources:
-    requests:
-    # -- Personen mock container requests and limits
-      cpu: 10m
-      memory: 150Mi
+affinity: {}
+tolerations: []
+resources:
+  requests:
+  # -- Personen mock container requests and limits
+    cpu: 10m
+    memory: 150Mi
+nameOverride: "brp-personen-mock"
