feat: properly propagate resources settings

--- a/charts/brp-personen-mock/templates/deployment.yaml
+++ b/charts/brp-personen-mock/templates/deployment.yaml
@@ -33,6 +33,10 @@ spec:
             - name: http-brp-mock
               containerPort: 5010
               protocol: TCP
+          {{- with .Values.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
       restartPolicy: Always
       {{- with .Values.nodeSelector }}
       nodeSelector:
