--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -5,6 +5,16 @@ type: application
 version: 4.1.2
 appVersion: "4.1.2"
 dependencies:
+  - name: cloudnative-pg
+    version: 0.23.2
+    repository: https://cloudnative-pg.github.io/charts
+    condition: cnpg.enabled
+    alias: cnpg
+  - name: cluster
+    version: 0.3.1
+    repository: https://cloudnative-pg.github.io/charts
+    condition: pgcluster.enabled
+    alias: pgcluster
   - name: keycloak
     version: 24.3.0
     repository: "@bitnami"
@@ -56,8 +66,6 @@ dependencies:
     version: 1.0.0
     repository: "@kiss-elastic"
     condition: kisselastic.enabled
-    tags:
-      - contact
   - name: infinispan
     version: 0.4.1
     repository: "@openshift"
@@ -67,5 +75,4 @@ dependencies:
     version: 1.0.46
     repository: "@zac"
     condition: zac.enabled
-    tags:
-      - zaak
+
