--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -113,7 +113,11 @@ grafana:
     auth.anonymous:
       enabled: false     # Ensure anonymous access is disabled
       hide_version: true # Add this to explicitly hide version for anonymous users
-      
+    feature_toggles:
+      provisioning: true
+      kubernetesClientDashboardsFolders: true
+      kubernetesDashboards: true
+      grafanaAPIServerEnsureKubectlAccess: true   
   image:
     pullPolicy: IfNotPresent
     pullSecrets: []
