--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -113,6 +113,8 @@ grafana:
     auth.anonymous:
       enabled: false     # Ensure anonymous access is disabled
       hide_version: true # Add this to explicitly hide version for anonymous users
+      
+    # -- Git Sync for Grafana dashboards
     feature_toggles:
       provisioning: true
       kubernetesClientDashboardsFolders: true
