--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -59,8 +59,9 @@ keycloak:
     realm: podiumd
     realmDisplayName: PodiumD
     realmFrontendUrl: https://keycloak.example.nl
-    realmIdentityProviders: {}
-    realmIdentityProviderMappers: {}
+    # Dont include the realmIdentityProviders and realmIdentityProviderMappers by default as it overwrites currently configured entra providers for multiple gemeentes
+    # realmIdentityProviders: {}
+    # realmIdentityProviderMappers: {}
     smtp:
       server: mail.example.nl
       port: "587"
@@ -326,16 +327,6 @@ infinispan:
   enabled: false
   monitoring:
     enabled: true
-
-abc:
-  configuration:
-    oidcUrl: https://abc.example.nl
-    oidcSecret: "abc"
-  enabled: false
-
-brpmock:
-  enabled: false
-  nameOverride: brpmock
 
 openzaak:
   configuration:
@@ -700,7 +691,7 @@ opennotificaties:
   persistentVolume:
     volumeAttributeShareName: opennotificaties
   image:
-    tag: "1.8.4"
+    tag: "1.8.2"
   resources:
     requests:
       cpu: 100m
@@ -858,7 +849,7 @@ objecten:
   persistentVolume:
     volumeAttributeShareName: objecten
   image:
-    tag: "3.0.3"
+    tag: "3.0.4"
   resources:
     requests:
       cpu: 100m
@@ -1001,6 +992,8 @@ openarchiefbeheer:
   fullnameOverride: openarchiefbeheer
   configuration:
     enabled: false
+    oidcUrl: https://abc.example.nl
+    oidcSecret: "abc"
     job:
       enabled: true
       backoffLimit: 6
